--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "node",
   "version": "1.0.0",
   "description": "Node.js basics",
-  "main": "server.js",
+  "main": "app.js",
   "author": "Abhishek Agrawal",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon app.js"
   },
   "devDependencies": {
     "nodemon": "^1.3.3"
